<resources>
    <string name="app_name">Color Master</string>
    <string name="add_profile">Add Profile</string>
    <string name="profile_1">profile_1</string>
    <string name="profile_2">profile_2</string>
    <string name="profile_3">profile_3</string>
    <string name="profile_4">profile_4</string>
    <string name="profile_5">profile_5</string>
    <string name="profile_6">profile_6</string>
    <string name="profile_7">profile_7</string>
    <string name="profile_8">profile_8</string>
    <string name="profile_9">profile_9</string>
    <string name="profile_name">profile_name</string>
    <string name="click_colour">Click a colour to get started!!</string>
    <string name="progress">View progress </string>
    <string name="edit_profile">Edit profile </string>
    <string name="delete">Delete profile </string>
    <string name="colour"> Color </string>
    <string name="status">Status </string>
    <string name="red">Red </string>
    <string name="orange">Orange </string>
    <string name="yellow">Yellow </string>
    <string name="green">Green </string>
    <string name="blue">Blue </string>
    <string name="indigo">Indigo </string>
    <string name="violet">Violet </string>
    <string name="white">White </string>
    <string name="black">Black </string>
    <string name="statusofprogress">Incomplete </string>
    <string name="lastname">Last name </string>
    <string name="firstname">First name </string>
    <string name="gametext_red"> The colour I am thinking of is Red </string>
    <string name="gametext_orange"> The colour I am thinking of is Orange </string>
    <string name="gametext_yellow"> The colour I am thinking of is Yellow </string>
    <string name="gametext_green"> The colour I am thinking of is Green </string>
    <string name="gametext_blue"> The colour I am thinking of is Blue </string>
    <string name="gametext_indigo"> The colour I am thinking of is Indigo </string>
    <string name="gametext_violet"> The colour I am thinking of is Violet </string>
    <string name="gametext_white"> The colour I am thinking of is White </string>
    <string name="gametext_black"> The colour I am thinking of is Black </string>
    <string name="audioSelect">Mute Audio</string>
    <string name="ready">play</string>
    <string name="DeleteTxt">Delete</string>
    <string name="diagonalTxt">Congratulations!!! You completed this Colour. Try another one</string>
    <string name="quiTxt">Quiz</string>

</resources>
