<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="project.colormaster.user_profile_activity">

            <Button
                android:id ="@+id/current_profile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:text="@string/profile_name"
                android:layout_centerHorizontal="true"
                android:background="@drawable/profile_button"
                />

            <Button
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:id="@+id/btn_ready"
                android:text="@string/ready"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/current_profile"
                android:layout_marginTop="40dp"
                android:textSize="15sp"
                android:padding="20dp"
                android:onClick="btnready" />

            <Button
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:text="@string/progress"
                android:id="@+id/btn_progress"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/btn_ready"
                android:layout_marginTop="15dp"
                android:textSize="15sp"
                android:padding="20dp"
                android:onClick="btnviewprogress"
                />

            <Button
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:text="@string/edit_profile"
                android:id="@+id/btn_edit_profile"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/btn_progress"
                android:layout_marginTop="15dp"
                android:textSize="15sp"
                android:padding="20dp"
                android:onClick="btneditp"
                />


            <Button
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/delete"
            android:id="@+id/btn_delete_profile"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_edit_profile"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:padding="20dp"
                android:onClick="btndeletep" />

        </RelativeLayout>
