<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="project.colormaster.progress_report_activity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/colour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"/>
            <TextView
                android:text="@string/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textStyle="bold"
                android:layout_marginLeft="100dp"
                android:textSize="30sp"
                android:layout_marginTop="30dp"
                />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textSize="25sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:text="@string/statusofprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="100dp"
                android:textSize="25sp"
                android:layout_marginTop="20dp"
                android:textStyle="italic"
                />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:text="@string/statusofprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="100dp"
                android:textSize="25sp"
                android:textStyle="italic"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:text="@string/statusofprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="100dp"
                android:textSize="25sp"
                android:textStyle="italic"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:text="@string/statusofprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="100dp"
                android:textSize="25sp"
                android:textStyle="italic"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:text="@string/statusofprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="100dp"
                android:textSize="25sp"
                android:textStyle="italic"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/indigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:text="@string/statusofprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="100dp"
                android:textSize="25sp"
                android:textStyle="italic"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/violet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:text="@string/statusofprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="100dp"
                android:textSize="25sp"
                android:textStyle="italic"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:text="@string/statusofprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="100dp"
                android:textSize="25sp"
                android:textStyle="italic"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:text="@string/statusofprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="100dp"
                android:textSize="25sp"
                android:textStyle="italic"/>
        </TableRow>

         </TableLayout>

</RelativeLayout>
