<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dip"
            android:paddingBottom="5dip">
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:layout_alignParentBottom="true">
        </LinearLayout>
        <!-- Login Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_below="@id/header">
            <!--  Email Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:text="@string/firstname"/>
            <EditText android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"/>
            <!--  Password Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:text="@string/lastname"/>
            <EditText android:layout_width="364dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="(Optional)"
                android:textColorHint="#757575"
                android:layout_marginBottom="20dip"
                android:inputType="textCapCharacters|textAutoCorrect"
                android:singleLine="true"/>
            <!-- Login button -->
            <Button android:id="@+id/btnLogin"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="30dip"
                android:text="ADD"
                android:onClick="btncreatep"
                />
            <Button android:id="@+id/btndelete"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="30dip"
                android:text="@string/DeleteTxt"
                android:onClick="btncreatep"
                />
        </LinearLayout>
        <!-- Login Form Ends -->
    </RelativeLayout>
</ScrollView>